tests/baselines/reference/decoratorOnClassMethod8.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod8.ts(4,5): error TS1241: Unable to resolve signature of method decorator when called as an expression.
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod8.ts(4,5): error TS1270: Decorator function return type 'C' is not assignable to type 'void | TypedPropertyDescriptor<() => void>'.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod8.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    class C {
        @dec method() {}
        ~~~~
!!! error TS1241: Unable to resolve signature of method decorator when called as an expression.
        ~~~~
!!! error TS1270: Decorator function return type 'C' is not assignable to type 'void | TypedPropertyDescriptor<() => void>'.
    }